@@ -7,44 +7,46 @@ import services.predicators.MovingAveragePredictor;
 import services.predicators.Predictor;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class PredictionService {
 
-    public PredictionResult executionPrediction(List<Dataset> data, int yearsToConsider)
-    {
+    public PredictionResult executionPrediction(List<Dataset> data, int yearsToConsider) {
         long startTime = System.currentTimeMillis();
 
         List<Dataset> filteredData = data;
 
-        if (data != null && !data.isEmpty() && yearsToConsider > 0)
-        {
-            int maxYear = data.stream().mapToInt(Dataset::getYear).max().orElse(0);
+        if (yearsToConsider > 0 && data != null && !data.isEmpty()) {
+            int latestYear = data.stream()
+                    .mapToInt(Dataset::getYear)
+                    .max()
+                    .orElse(0);
 
-            int cutoffYear = maxYear - yearsToConsider;
+            int cutoffYear = latestYear - yearsToConsider;
 
             filteredData = data.stream()
-                    .filter(d -> d.getYear() > cutoffYear)
-                    .collect(Collectors.toList());
+                    .filter(row -> row.getYear() >= cutoffYear)
+                    .toList();
         }
+        long uniqueYears = filteredData.stream()
+                .map(Dataset::getYear)
+                .distinct()
+                .count();
 
         Predictor predictor;
         String algorithmName;
         String warningMessage = "";
 
-        if (data == null || data.size() < 3)
-        {
+        if (uniqueYears < 5) {
             predictor = new MovingAveragePredictor();
             algorithmName = "Moving Average";
 
-            int dataSize = (data == null) ? 0 : data.size();
-            warningMessage = "Warning: Low historical data (" + dataSize + " terms). Prediction may be unreliable.";
+            warningMessage = "Limited historical data available. Using Moving Average.";
         } else {
             predictor = new LinearRegressionPredictor();
             algorithmName = "Linear Regression";
         }
 
-        double prediction = predictor.predict(data);
+        double prediction = predictor.predict(filteredData);
 
         long endTime = System.currentTimeMillis();
         long executionTime = endTime - startTime;
